Apply latest updates to HTML, CSS, and JS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <h1>이중 진자 시뮬레이션 프로그램<span class="creator-name">-by 경환</span></h1>
 
+    <p class="teacher-message">강호중 선생님 사랑합니다. ❤️ -1209 서경환-</p>
+
     <div id="controls">
         <div>
             <label for="r1">첫째 진자 길이 (r1): <span id="r1_val">100</span></label>
